feat(security): add roles and permissions for users to controller routes.